works. a few minor issues

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,11 +13,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@ipsum-labs/dash-types": "file:../shared-types",
+    "@ipsum-labs/dash-util": "file:../shared-util",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@ipsum-labs/dash-types": "file:../shared-types",
-    "@ipsum-labs/dash-util": "file:../shared-util",
+    "@prezly/react-promise-modal": "^0.2.0",
     "@react-hook/window-size": "^3.0.7",
     "classnames": "^2.2.6",
     "currency-symbol-map": "^5.0.1",
@@ -40,6 +41,7 @@
     "react-firebase-hooks": "^4.0.1",
     "react-google-recaptcha-v3": "^1.7.0",
     "react-json-view": "^1.21.3",
+    "react-linkify": "^1.0.0-alpha",
     "react-player": "^2.7.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
