--- a/packages/wfw/tsconfig.json
+++ b/packages/wfw/tsconfig.json
@@ -1,19 +1,19 @@
 {
-  "include": ["src"],
+  "include": ["src","types"],
   "compilerOptions": {
     "declaration": true,
-    "module": "commonjs",
+    "module": "esnext",
+    "moduleResolution": "node",
     "target": "es6",
     "noImplicitAny": false,
     "sourceMap": true,
     "outDir": "dist",
     "jsx": "react",
     "skipLibCheck": true,
-    "typeRoots" : ["../../node_modules/@types", "types"],
+    "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
-    "moduleResolution": "node",
     "baseUrl": "./",
   },
   "exclude": [
