--- a/packages/app--ipsum-store/package.json
+++ b/packages/app--ipsum-store/package.json
@@ -10,44 +10,47 @@
   },
   "dependencies": {
     "@artemis-prime/wfw": "1.0.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@ipsum-labs/domain-types": "1.0.0",
     "@ipsum-labs/util": "1.0.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.3",
+    "@mui/styles": "^5.2.3",
     "@prezly/react-promise-modal": "^0.2.0",
     "@react-hook/window-size": "^3.0.7",
     "classnames": "^2.2.6",
     "currency-symbol-map": "^5.0.1",
     "faker": "^5.5.3",
     "firebase": "9.3.0",
-    "formik": "^2.2.6",
-    "formik-material-ui": "^3.0.1",
+    "formik": "^2.2.9",
+    "formik-mui": "^4.0.0-alpha.3",
     "generate-unique-id": "^2.0.1",
     "json2mq": "^0.2.0",
     "match-sorter": "^6.3.1",
     "material-ui-phone-number": "^2.2.6",
-    "material-ui-popup-state": "^1.7.0",
+    "material-ui-popup-state": "^2.0.0",
     "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
     "mobx-utils": "^6.0.4",
     "moment": "^2.29.1",
     "query-string": "^6.13.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-firebase-hooks": "^4.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.0",
     "react-json-view": "^1.21.3",
     "react-linkify": "^1.0.0-alpha",
     "react-player": "^2.7.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "5.1.x",
+    "react-router-dom": "5.1.x",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
-    "selectn": "^1.1.2"
+    "selectn": "^1.1.2",
+    "tsafe": "^0.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -59,8 +62,8 @@
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.4",
     "@types/classnames": "^2.2.10",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-table": "^7.7.7",
     "@types/webpack-dev-server": "^4.1.0",
@@ -73,7 +76,6 @@
     "file-loader": "^6.2.0",
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.3.2",
-    "jabber": "^1.2.2",
     "json-sass": "^1.3.5",
     "json5": "^2.2.0",
     "path": "^0.12.7",
@@ -94,8 +96,7 @@
     "webpack-dev-server": "^4.2.1"
   },
   "workspaces": {
-    "nohoist": [
-    ]
+    "nohoist": []
   },
   "browser": {
     "fs": false,
