--- a/packages/module--wfw/package.json
+++ b/packages/module--wfw/package.json
@@ -25,6 +25,10 @@
       "import": "./dist/types/index.js",
       "types": "./dist/types/index.d.ts"
     },
+    "./style": {
+      "import": "./dist/style/index.js",
+      "types": "./dist/style/index.d.ts"
+    },
     "./types/auth": {
       "import": "./dist/types/auth/index.js",
       "types": "./dist/types/auth/index.d.ts"
@@ -39,33 +43,34 @@
     }
   },
   "dependencies": {
-    "selectn": "^1.1.2",
-    "query-string": "^6.13.8",
-    "formik": "^2.2.6",
-    "formik-material-ui": "^3.0.1",
+    "@prezly/react-promise-modal": "^0.2.0",
     "@react-hook/window-size": "^3.0.7",
-    "moment": "^2.29.1",
-    "react-linkify": "^1.0.0-alpha",
-    "react-player": "^2.7.0",
+    "formik": "^2.2.9",
+    "formik-mui": "^4.0.0-alpha.3",
     "generate-unique-id": "^2.0.1",
     "json2mq": "^0.2.0",
-    "@prezly/react-promise-modal": "^0.2.0"
-
+    "moment": "^2.29.1",
+    "query-string": "^6.13.8",
+    "react-linkify": "^1.0.0-alpha",
+    "react-player": "^2.7.0",
+    "selectn": "^1.1.2",
+    "tss-react": "^3.0.0"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.3",
+    "@mui/styles": "^5.2.3",
     "classnames": "^2.2.6",
     "material-ui-phone-number": "^2.2.6",
-    "material-ui-popup-state": "^1.7.0",
+    "material-ui-popup-state": "^2.0.0",
     "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
     "mobx-utils": "^6.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.0",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0"
   },
