--- a/packages/module--wfw/package.json
+++ b/packages/module--wfw/package.json
@@ -53,14 +53,14 @@
     "query-string": "^6.13.8",
     "react-linkify": "^1.0.0-alpha",
     "react-player": "^2.7.0",
-    "selectn": "^1.1.2",
-    "tss-react": "^3.0.0"
+    "selectn": "^1.1.2"
   },
   "peerDependencies": {
     "@mui/icons-material": "^5.2.1",
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
+    "tss-react": "^3.0.0",
     "classnames": "^2.2.6",
     "material-ui-phone-number": "^2.2.6",
     "material-ui-popup-state": "^2.0.0",
