--- a/packages/module--wfw/package.json
+++ b/packages/module--wfw/package.json
@@ -60,7 +60,6 @@
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
-    "tss-react": "^3.0.0",
     "classnames": "^2.2.6",
     "material-ui-phone-number": "^2.2.6",
     "material-ui-popup-state": "^2.0.0",
@@ -72,7 +71,8 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-select": "^5.2.1",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "tss-react": "^3.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
@@ -82,6 +82,7 @@
     "@types/react-table": "^7.7.7",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1"
+    "style-loader": "^3.2.1",
+    "typescript": "^4.5.3"
   }
 }
